<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingList</string>
    <string name="no_lists">No Shopping Lists</string>
    <string name="save">Save</string>
    <string name="list_title">List Title</string>
    <string name="location">Location</string>
    <string name="list_menu_add_list">Add List</string>
    <string name="showlist">List</string>
    <string name="menu_map">Map</string>
    <string name="add_item">Add Item</string>
    <string name="edit_list">Edit List</string>
    <string name="edit_item">Edit Item</string>
    <string name="remove">Remove</string>
    <string name="item_name">Item</string>
    <string name="item_quantity">Quantity</string>
    <string name="locatebutton">Locate button</string>
    <string name="close">Close</string>
    <string name="due_date">Select due date</string>
    <string name="details">EditList</string>
    <string name="hide_details">Hide details</string>
    <string name="test_title">Test title</string>
    <string name="test_location">Test location</string>
    <string name="test_location_long">A really long location name for testing purposes</string>

    <string name="shoppinglistdb_onCreate">"
        create table shoppinglist (_id integer primary key autoincrement, title text not null, location text, latitude integer, longitude integer, due_date integer not null);
		create table shoppinglistitem (_id integer primary key autoincrement, item_title text not null, quantity text, picked_up integer not null, list_id integer not null, foreign key(list_id) references shoppinglist(_id) on delete cascade on update cascade);
		"	</string>
	
    <string name="shoppinglistdb_onUpgrade">"
        drop table if exists shoppinglist;
		drop table if exists shoppinglistitem;
		"
    </string>

</resources>